cleanup
git-svn-id: https://ncisvn.nci.nih.gov/svn/geworkbench/trunk/geworkbench@4300 8b29bb6e-589a-435a-9a12-3ab907be3462